<resources>
    <string name="app_name">TicTacToe</string>
    <string name="welcome_main">Tic Tac Toe</string>
    <string name="blank"></string>
    <string name="choose_option">Please choose an option</string>
    <string name="welcome_standings">Standings</string>
    <string name="heading_name">Name</string>
    <string name="heading_games_won">Games\nWon</string>
    <string name="heading_games_played">Games\nPlayed</string>
    <string name="heading_last_played">Date Last Game Played</string>
    <string name="change_player">Change Player</string>
    <string name="add_player">Add New Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="use_player">Use Selected Player</string>
    <string name="select_or_add">Select player or add new</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="confirm_sure">Confirm you want to delete selected player?</string>
    <string name="name">Enter name</string>
    <string name="ok">Add Player</string>
    <string name="options">Options</string>
    <string name="two_player">Two Player</string>
    <string name="player_two">Player Two:</string>
    <string name="difficulty">Android Smarter</string>
    <string name="enter_name">New player Name</string>
    <string name="cancel">Cancel</string>
    <string name="add_new">Add new player</string>
    <string name="reset">Start New Game</string>
    <string name="your_turn">\'s turn!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_new">Welcome new player!</string>
    <string name="cat_credit">Cat image from https://www.clipartmax.com/</string>

    <string-array name="main_menu_options">
        <item>Play Game</item>
        <item>Change Player</item>
        <item>Standings</item>
        <item>Options</item>
    </string-array>
</resources>