<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ChangePlayer">

    <TextView
        android:id="@+id/title_change_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito"
        android:text="@string/change_player"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/existing_player_list"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_info_text" />

    <Button
        android:id="@+id/add_player"
        style="@style/regular_button"
        android:background="@drawable/rounded_corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_player"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toStartOf="@+id/remove_player"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_selected" />

    <Button
        android:id="@+id/remove_player"
        style="@style/regular_button"
        android:background="@drawable/rounded_corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_player"
        app:layout_constraintTop_toTopOf="@+id/add_player" />

    <Button
        android:id="@+id/use_selected"
        style="@style/regular_button"
        android:background="@drawable/rounded_corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/use_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/existing_player_list" />

    <TextView
        android:id="@+id/page_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_or_add"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_change_player" />

</androidx.constraintlayout.widget.ConstraintLayout>